--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body id="body">
-    <div>
-        <iframe id="myObject" src="maze.html" style="width:820;height:820;padding-top: 100;" frameborder = 0></iframe>
-    </div>
+    <iframe id="myObject" src="maze.html" style="border: none; width: 100vw; height: 100vh;" scrolling="no"></iframe>
 </body>
 
 </html>
