--- a/maze.html
+++ b/maze.html
@@ -6,6 +6,7 @@
     <script src="phaser.js"></script>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="jquery.csv.min.js"></script>
+    <script src="tutorial.js"></script>
     <script src="levelSelector.js"></script>
     <script src="maze.js"></script>
     <script src="mazeHud.js"></script>
